force-app/main/default/objects/Policies__c/Policies__c.object-meta.xml
<CustomObject>
    <description>custom object to capture details of Policies</description>
    <label>Policies</label>
    <nameField>
        <label>Policies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>