force-app/main/default/objects/Policies__c/fields/Class_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Risk__c</fullName>
    <description>Field to capture Class of Risk of policy</description>
    <label>Class of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Association Liability</fullName>
            </value>
            <value>
                <fullName>Aviation Liability</fullName>
            </value>
            <value>
                <fullName>Aviation/Hull Insurance</fullName>
            </value>
            <value>
                <fullName>Bloodstock Insurance</fullName>
            </value>
            <value>
                <fullName>Business Insurance</fullName>
            </value>
            <value>
                <fullName>Caravan Insurance</fullName>
            </value>
            <value>
                <fullName>Carriers Liability</fullName>
            </value>
            <value>
                <fullName>Consequential Loss</fullName>
            </value>
            <value>
                <fullName>Contract Machinery Insurance</fullName>
            </value>
            <value>
                <fullName>Contract Works Single</fullName>
            </value>
            <value>
                <fullName>Contractors All Risk Insurance</fullName>
            </value>
            <value>
                <fullName>Crime Insurance (Fidelity)</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Delay in Start Up</fullName>
            </value>
            <value>
                <fullName>Directors &amp; Officers Liability</fullName>
            </value>
            <value>
                <fullName>Directors &amp; Officers Liability (Excess)</fullName>
            </value>
            <value>
                <fullName>Electronic Equipment</fullName>
            </value>
            <value>
                <fullName>Employment Practices Insurance</fullName>
            </value>
            <value>
                <fullName>Equestrian Cover</fullName>
            </value>
            <value>
                <fullName>Expat Insurance</fullName>
            </value>
            <value>
                <fullName>Fee (Broker)</fullName>
            </value>
            <value>
                <fullName>Fee (placement)</fullName>
            </value>
            <value>
                <fullName>Fee (Survey Risk Management)</fullName>
            </value>
            <value>
                <fullName>Fee (Workers Compensation)</fullName>
            </value>
            <value>
                <fullName>Freight Forwarders Liability</fullName>
            </value>
            <value>
                <fullName>General Property Insurance</fullName>
            </value>
            <value>
                <fullName>Householders Insurance</fullName>
            </value>
            <value>
                <fullName>Industrial Special Risks Crime Split</fullName>
            </value>
            <value>
                <fullName>Industrial Special Risks Insurance</fullName>
            </value>
            <value>
                <fullName>Industrial Special Risks Insurance - OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>