force-app/main/default/objects/Policies__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <description>Field to capture Current State of policy</description>
    <label>Current State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Not Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>