force-app/main/default/objects/Policies__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Field to capture Effective Date of policy</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>