force-app/main/default/objects/Policies__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>field to capture Frequency of policy</description>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>