force-app/main/default/objects/Policies__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>Field to capture From Date of policy</description>
    <label>From Date</label>
    <type>Date</type>
</CustomField>