force-app/main/default/objects/Policies__c/fields/Has_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Has_Coinsurance__c</fullName>
    <description>Field to Has Coinsurance for policy</description>
    <label>Has Coinsurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>