force-app/main/default/objects/Policies__c/fields/Include_Broker_Fee_in_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Include_Broker_Fee_in_Deposit__c</fullName>
    <description>Field to capture value for Include Broker Fee in Deposit of policy</description>
    <label>Include Broker Fee in Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>