force-app/main/default/objects/Policies__c/fields/Insight_Id__c.field-meta.xml
<CustomField>
    <fullName>Insight_Id__c</fullName>
    <externalId>true</externalId>
    <label>Policy Transaction Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>