force-app/main/default/objects/Policies__c/fields/Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Name__c</fullName>
    <description>Field to capture Insurer Name of the policy</description>
    <label>Insurer Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>360S</fullName>
            </value>
            <value>
                <fullName>Ag Guard Pty Ltd</fullName>
            </value>
            <value>
                <fullName>ALLI - ALLIANZ</fullName>
            </value>
            <value>
                <fullName>CALLIDEN - AU</fullName>
            </value>
            <value>
                <fullName>CALLIDEN - CALLIDEN</fullName>
            </value>
            <value>
                <fullName>CALLIDENAG - CALLIDEN</fullName>
            </value>
            <value>
                <fullName>CGU - CGU</fullName>
            </value>
            <value>
                <fullName>CHARTIS - CHARTIS</fullName>
            </value>
            <value>
                <fullName>Chubb Insurance</fullName>
            </value>
            <value>
                <fullName>CLUB - ALLIANZ</fullName>
            </value>
            <value>
                <fullName>GREATLAKES - CALIBRE</fullName>
            </value>
            <value>
                <fullName>Hutch Underwriting</fullName>
            </value>
            <value>
                <fullName>IBNA - ZURICH</fullName>
            </value>
            <value>
                <fullName>LUMLEY - LUMLEY</fullName>
            </value>
            <value>
                <fullName>NTI - NTI</fullName>
            </value>
            <value>
                <fullName>Probitas 1492</fullName>
            </value>
            <value>
                <fullName>QBE - QBEMM</fullName>
            </value>
            <value>
                <fullName>SGUAS</fullName>
            </value>
            <value>
                <fullName>TravelCard</fullName>
            </value>
            <value>
                <fullName>VERO - ROYALSUN</fullName>
            </value>
            <value>
                <fullName>VERO - VERO</fullName>
            </value>
            <value>
                <fullName>ZURI - ZURICH</fullName>
            </value>
            <value>
                <fullName>AIG Australia Limited</fullName>
            </value>
            <value>
                <fullName>Blue Zebra Insurance Pty Ltd</fullName>
            </value>
            <value>
                <fullName>AIG Australia Limited (Insurance)</fullName>
            </value>
            <value>
                <fullName>Protecsure Pty Ltd (for Chubb)</fullName>
            </value>
            <value>
                <fullName>Insurance Australia Limited (T/as CGU)</fullName>
            </value>
            <value>
                <fullName>Allianz Australia Limited</fullName>
            </value>
            <value>
                <fullName>Dawes Motor Insurance</fullName>
            </value>
            <value>
                <fullName>Vero Insurance Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>