force-app/main/default/objects/Policies__c/fields/Is_Instalment_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_Instalment_Policy__c</fullName>
    <description>Field to capture value for &quot;Is Instalment Policy&quot; for a policy</description>
    <label>Is Instalment Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>