force-app/main/default/objects/Policies__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <description>Field of capture Months of policy</description>
    <label>Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>