force-app/main/default/objects/Policies__c/fields/Net_Comm_Fee_exGST__c.field-meta.xml
<CustomField>
    <fullName>Net_Comm_Fee_exGST__c</fullName>
    <formula>Total_Net_Comm_exGST__c +  Total_Net_Fee_exGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Comm &amp; Fee exGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>