force-app/main/default/objects/Policies__c/fields/No_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments__c</fullName>
    <description>Field to capture No. of Payments of policy</description>
    <label>No. of Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>