force-app/main/default/objects/Policies__c/fields/No_of_Payments_in_Deposit__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments_in_Deposit__c</fullName>
    <description>field to capture No. of Payments in Deposit of a policy</description>
    <label>No. of Payments in Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>