force-app/main/default/objects/Policies__c/fields/Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Policy Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>