force-app/main/default/objects/Policies__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Field to capture policy number</description>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>