force-app/main/default/objects/Policies__c/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <description>Field to capture value for Renewable</description>
    <label>Renewable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>