force-app/main/default/objects/Policies__c/fields/Spread_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Spread_Annual_Premium__c</fullName>
    <description>Field to capture Spread Annual Premium of policy</description>
    <label>Spread Annual Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>