force-app/main/default/objects/Policies__c/fields/Spread_Return_Premium__c.field-meta.xml
<CustomField>
    <fullName>Spread_Return_Premium__c</fullName>
    <description>Field to capture Spread Return Premium for policy</description>
    <label>Spread Return Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>