force-app/main/default/objects/Policies__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>Field to capture To Date of policy</description>
    <label>To Date</label>
    <type>Date</type>
</CustomField>