force-app/main/default/objects/Policies__c/fields/Total_Net_Comm_exGST__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Comm_exGST__c</fullName>
    <label>Total Net Comm exGST</label>
    <summarizedField>PolicyTransaction__c.NetCommExGST__c</summarizedField>
    <summaryForeignKey>PolicyTransaction__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>