force-app/main/default/objects/Policies__c/fields/Transaction_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Name__c</fullName>
    <label>Transaction Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>