force-app/main/default/objects/Policies__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Policy_Number__c</columns>
    <columns>NAME</columns>
    <columns>Class_of_Risk__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Insurer_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Insight_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>